--- a/module1-define-ml-problems/LS_DS_231_assignment.ipynb
+++ b/module1-define-ml-problems/LS_DS_231_assignment.ipynb
@@ -45,6 +45,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Wrangle ML datasets (From 231 assignment)\n",
+    "[ ] Continue to clean and explore your data.\n",
+    "\n",
+    "[ ] For the evaluation metric you chose, what score would you get just by guessing?\n",
+    "\n",
+    "[ ] Can you make a fast, first model that beats guessing?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Uploading Data Set"
    ]
   },
